--- a/projeto/voemais/package.json
+++ b/projeto/voemais/package.json
@@ -13,10 +13,12 @@
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "next": "14.2.13",
+    "qrcode.react": "^4.0.1",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-select": "^5.8.1",
     "uuid": "^10.0.0",
     "yup": "^1.4.0"
   }
